feat: generate full v3.0 entries for CSF stubs (CSF-001..005, CSF-019..023, CSF-033..040, CSF-046..055, CSF-057..070, CSF-073..080)